# hirelord

./: .env.example  .gitignore  main.py  pyproject.toml  run_discovery.py  run_tailor.py  seed_job.py
.githooks/: pre-commit
hirelord/: config.py  dashboard.py  scheduler.py
hirelord/agents/: discovery.py  gmail_agent.py  tailor.py
hirelord/db/: models.py  store.py
hirelord/prompts/: tailor.py
hirelord/tools/: application_router.py  gmail.py  linkedin_auth.py  linkedin_scraper.py  proxycurl.py  resume.py
output/: Immersive_Labs_Senior_Unity_XR_Developer_cover_letter.md  Immersive_Labs_Senior_Unity_XR_Developer_resume.md
