[project]
name = "hirelord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]
