[project]
name = "hirelord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.22",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "feedparser>=6.0.12",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.0",
    "google-auth-httplib2>=0.3.0",
    "google-api-python-client>=2.193.0",
    "playwright>=1.58.0",
]
